two minor warning removed.