@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 import com.fasterxml.jackson.databind.ObjectReader;
@@ -26,7 +25,7 @@ public class Message {
      */
     public Message(int sequence, Map<String, ?> map) {
         this.sequence = sequence;
-        this.data = Collections.unmodifiableMap(new HashMap<>(map));
+        this.data = Map.copyOf(map);
     }
 
     /**
